--- a/INDEX.html
+++ b/INDEX.html
@@ -16,9 +16,9 @@
             </ul>
             <h1>2-Environnement :</h1>
             <p>cette formation se fera à cet endroit :</p>
-            <img src="res/formation.jpg">
+            <img src="RES/formation.jpg">
             <p>Avec ces instructeurs:</p>
-            <img src="res/ins.jpg">
+            <img src="RES/ins.jpg">
             <h1>3-La plateforme:</h1>
             <p>Les cours et les résumés se trouvent dans la plateforme de 
                 <a id="ijahouni" href="https://ada.gomycode.tn/">GOMYCODE</a>
