--- a/RES/page.html
+++ b/RES/page.html
@@ -2,5 +2,5 @@
 <iframe width="560" height="315" src="https://www.youtube.com/embed/BQAIqXh2OxU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/y3UH2gAhwPI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 <form method="get" action="C:\Users\MOHAMD\Desktop\CODE/index.HTML">
-<a href="../index.html"><button>retourner vers la page d'acceuil</button></a>
+<a href="../INDEX.html"><button>retourner vers la page d'acceuil</button></a>
 </form>
